添加全局搜索框 V1（不影响滚动逻辑）

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 <body>
 
   <div id="controls">
+    <input 
+  type="text" 
+  id="searchInput" 
+  placeholder="🔍 搜索唱段..."
+  style="flex:1; min-width:180px; padding:6px; font-size:16px;"
+>
     <select id="operaSelect"></select>
     <select id="songSelect"></select>
 
